# projectChess

./: CMakeLists.txt  README.md  main.cpp
app/: CMakeLists.txt  main.cpp
include/: Board.h  CMakeLists.txt  Move.h  Position.h
include/figures/: Bishop.h  Board.h  Color.h  Empty.h  King.h  Knight.cpp  Knight.h  Move.h  Pawn.h  Piece.h  Queen.h  Rook.h  allfigures.h
include/game/: game.h
include/graphics/: BoardRenderer.h  GameWindow.h  TextureStorage.h
src/: Board.cpp  CMakeLists.txt
src/figures/: Bishop.cpp  Board.cpp  King.cpp  Knight.cpp  Move.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/game/: game.cpp
src/graphics/: BoardRenderer.cpp  GameWindow.cpp  TextureStorage.cpp
tests/: BishopTest.cpp  BoardTest.cpp  CMakeLists.txt  KingTest.cpp  KnightTest.cpp  PawnTest.cpp  QueenTest.cpp  RookTest.cpp  test1.cpp
